tests/baselines/reference/APISample_compile.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,40): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_compile.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The sample sources can be found
             at: https://github.com/Microsoft/TypeScript/wiki/Using-the-Compiler-API#a-minimal-compiler
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var process: any;
    declare var console: any;
    declare var os: any;
    
    import ts = require("typescript");
    
    export function compile(fileNames: string[], options: ts.CompilerOptions): void {
        var program = ts.createProgram(fileNames, options);
        var emitResult = program.emit();
    
        var allDiagnostics = ts.getPreEmitDiagnostics(program);
    
        allDiagnostics.forEach(diagnostic => {
            var message = ts.flattenDiagnosticMessageText(diagnostic.messageText, '\n');
            if (!diagnostic.file) {
                console.log(message);
                return;
            }
            var { line, character } = diagnostic.file.getLineAndCharacterOfPosition(diagnostic.start!);
            console.log(`${diagnostic.file.fileName} (${line + 1},${character + 1}): ${message}`);
        });
    
        var exitCode = emitResult.emitSkipped ? 1 : 0;
        console.log(`Process exiting with code '${exitCode}'.`);
        process.exit(exitCode);
    }
    
    compile(process.argv.slice(2), {
        noEmitOnError: true, noImplicitAny: true,
        target: ts.ScriptTarget.ES5, module: ts.ModuleKind.CommonJS
    });
    